# data-guardian

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
config/: default.toml
src/: compression.rs  lib.rs  main.rs  notification.rs  settings.rs
src/data_guardian/: compression.rs  mod.rs  notification.rs  settings.rs
tests/: it.rs
wix/: main.wxs
