[package]
name = "data-guardian"
version = "1.0.1"
edition = "2024"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
description = "System utility that monitors the disk I/O usage of applications running on your computer"
repository = "https://github.com/xosnrdev/data-guardian"
homepage = "https://github.com/xosnrdev/data-guardian?tab=readme-ov-file"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "071B06A3-F461-4809-9558-77DC19496C2A"
path-guid = "3770EDFA-F55A-4C9F-BAFC-CD8EDDC096F1"
license = false
eula = false

[[bin]]
name = "dg"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.3"
config = "0.15.8"
directories = "6.0.0"
flate2 = "1.0.35"
nix = { version = "0.29.0", features = ["user"] }
notify-rust = "4.11.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sysinfo = "0.33.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
    "fs",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.17.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
debug = false
incremental = false
overflow-checks = false
rpath = false
debug-assertions = false

[profile.dev]
debug-assertions = true
overflow-checks = true

[package.metadata]
codegen-units-std = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
