[package]
name = "data-guardian"
version = "1.0.2"
edition = "2024"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
description = "System utility that monitors the disk I/O usage of applications running on your computer"
repository = "https://github.com/xosnrdev/data-guardian"
homepage = "https://github.com/xosnrdev/data-guardian?tab=readme-ov-file"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "071B06A3-F461-4809-9558-77DC19496C2A"
path-guid = "3770EDFA-F55A-4C9F-BAFC-CD8EDDC096F1"
license = false
eula = false

[[bin]]
name = "dg"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.4"
config = "0.15.11"
directories = "6.0.0"
flate2 = "1.1.2"
nix = { version = "0.30.1", features = ["user"] }
notify-rust = "4.11.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.35.2"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
    "fs",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.20.0"

[profile.dist]
inherits = "release"
lto = "thin"

